example4.output
Terminals unused in grammar

   NUMBER
   CLOSERANGLE


Grammar

    0 $accept: tag $end

    1 tag: /* empty */
    2    | contents opening_tag contents closing_tag

    3 contents: tag
    4         | ANYTHING

    5 opening_tag: LANGLE ANYTHING RANGLE

    6 closing_tag: LANGLE_SLASH ANYTHING RANGLE


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258)
LANGLE (259) 5
CLOSERANGLE (260)
RANGLE (261) 5 6
LANGLE_SLASH (262) 6
ANYTHING (263) 4 5 6


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
tag (10)
    on left: 1 2, on right: 0 3
contents (11)
    on left: 3 4, on right: 2
opening_tag (12)
    on left: 5, on right: 2
closing_tag (13)
    on left: 6, on right: 2


State 0

    0 $accept: . tag $end

    ANYTHING  shift, and go to state 1

    $default  reduce using rule 1 (tag)

    tag       go to state 2
    contents  go to state 3


State 1

    4 contents: ANYTHING .

    $default  reduce using rule 4 (contents)


State 2

    0 $accept: tag . $end
    3 contents: tag .

    $end  shift, and go to state 4

    $default  reduce using rule 3 (contents)


State 3

    2 tag: contents . opening_tag contents closing_tag

    LANGLE  shift, and go to state 5

    opening_tag  go to state 6


State 4

    0 $accept: tag $end .

    $default  accept


State 5

    5 opening_tag: LANGLE . ANYTHING RANGLE

    ANYTHING  shift, and go to state 7


State 6

    2 tag: contents opening_tag . contents closing_tag

    ANYTHING  shift, and go to state 1

    $default  reduce using rule 1 (tag)

    tag       go to state 8
    contents  go to state 9


State 7

    5 opening_tag: LANGLE ANYTHING . RANGLE

    RANGLE  shift, and go to state 10


State 8

    3 contents: tag .

    $default  reduce using rule 3 (contents)


State 9

    2 tag: contents . opening_tag contents closing_tag
    2    | contents opening_tag contents . closing_tag

    LANGLE        shift, and go to state 5
    LANGLE_SLASH  shift, and go to state 11

    opening_tag  go to state 6
    closing_tag  go to state 12


State 10

    5 opening_tag: LANGLE ANYTHING RANGLE .

    $default  reduce using rule 5 (opening_tag)


State 11

    6 closing_tag: LANGLE_SLASH . ANYTHING RANGLE

    ANYTHING  shift, and go to state 13


State 12

    2 tag: contents opening_tag contents closing_tag .

    $default  reduce using rule 2 (tag)


State 13

    6 closing_tag: LANGLE_SLASH ANYTHING . RANGLE

    RANGLE  shift, and go to state 14


State 14

    6 closing_tag: LANGLE_SLASH ANYTHING RANGLE .

    $default  reduce using rule 6 (closing_tag)
